# Dive_into_deep_learning_with_libtorch

./: .gitignore  CMakeLists.txt  README.md  mlp.pth
data/: airfoil_self_noise.csv  house_tiny.csv  kaggle_house_data.csv  kaggle_house_train_data_labels.csv
src/: TempHelpFunctions.hpp  csvloader.h  fashion.h  utils.cpp  utils.h
src/02_Preliminaries/: CMakeLists.txt  autograd.cpp  calculus.cpp  data_preprocessing.cpp  linear_algebra.cpp  ndarray.cpp  probability.cpp
src/03_LinearNeuralNetworks/: CMakeLists.txt  linear_regression.cpp  linear_regression_concise.cpp  linear_regression_scratch.cpp  load_image_dataset.cpp  softmax_regression_concise.cpp  softmax_regression_scratch.cpp
src/04_MultilayerPerceptrons/: CMakeLists.txt  Kaggle_house_prices.cpp  dropout.cpp  mlp.cpp  mlp_consice.cpp  mlp_scratch.cpp  numerical_stability_initialization.cpp  underfit_overfit.cpp  weight_decay.cpp
src/05_DeepLearningComputation/: CMakeLists.txt  File_io.cpp  ParameterManagement.cpp  custom_layers.cpp  gpu.cpp  model_construction.cpp
src/06_ConvolutionalNeuralNetworks/: CMakeLists.txt  Channels.cpp  ConvolutionalLayers.cpp  LeNet.cpp  PaddingAndStride.cpp  Pooling.cpp
src/07_ModernConvolutionalNeuralNetworks/: AlexNet.cpp  CMakeLists.txt  DensNet.cpp  GoogLeNet.cpp  NiN.cpp  ResNet.cpp  VGG.cpp  batch_norm.cpp  custom-dataset.cpp
src/08_RecurrentNeuralNetworks/: CMakeLists.txt  Language_models.cpp  RNN.cpp  RecurrentNeuralNetwork.cpp  SequenceModels.cpp  TextPreprocessing.cpp  rnn_concise.cpp  rnn_example.cpp  rnn_scratch.cpp  util.cpp  util.h
src/09_Recurrent_Modern/: Bidirectional_RNN.cpp  CMakeLists.txt  Deep_recurrent_neural_networks.cpp  Gated_recurrent_units.cpp  Long_short_term_memory.cpp  Machine_translation_dataset.cpp  SequenceToSequence.cpp
src/10_Attention_mechanisms/: AttentionPooling.cpp  AttentionScoringFunctions.cpp  Attention_QKV.cpp  Attention_cues.cpp  BahdanauAttention.cpp  CMakeLists.txt  MultiHeadAttention.cpp  NadarayaWatsonKernelRegression.cpp  SelfAttentionAndPositionalEncoding.cpp  Transformer.cpp  VisionTransformers.cpp
src/11_Optimization_algorithms/: Adadelta.cpp  Adagrad.cpp  Adam.cpp  CMakeLists.txt  Convexity.cpp  GradientDescent.cpp  LearningRateScheduling.cpp  MinibatchStochasticGradientDescent.cpp  Momentum.cpp  Optimization_intro.cpp  RMSProp.cpp  StochasticGradientDescent.cpp
src/12_Computational_performance/: AsynchronousComputation.cpp  CMakeLists.txt  Hybridize.cpp
src/13_Computer_vision/: AnchorBoxes.cpp  BoundingBoxes.cpp  CMakeLists.txt  Fine_Tuning.cpp  FullyConvolutionalNetworks.cpp  Get_resnet18_without_last_2_layers.py  Get_resnet34_turn_off_grad.py  Get_resnet34_without_last_layer.py  Get_segmentation_fcn_resnet101.py  Get_vgg19_neural_style.py  ImageAugmentation.cpp  Kaggle_cifar10.cpp  Kaggle_dog.cpp  MultiscaleObjectDetection.cpp  NeuralStyleTransfer.cpp  ObjectDetectionDataset.cpp  RegionBasedCNNs.cpp  SemanticSegmentation.cpp  SingleShotMultiboxDetection.cpp  TestTorchVision.cpp  TransposedConvolution.cpp  read_data.py
src/13_Computer_vision/yolov4/: README.md  darknet2pytorch.py
src/13_Computer_vision/yolov4/src/: config.cc  darknet.cc  main.cc
src/14_NLP_pretraining/: BERT.cpp  BERT_pretraining_dataset.cpp  CMakeLists.txt  PretrainingBERT.cpp  SubwordEmbedding.cpp  Word2vec_pretraining.cpp  WordSimilarityAndAnalogy.cpp  Word_embedding_dataset.cpp
src/15_NLP_applications/: 15_NaturalLanguageInferenceDataset  CMakeLists.txt  NaturalLanguageInferenceAttention.cpp  NaturalLanguageInferenceBert.cpp  NaturalLanguageInferenceDataset.cpp  SentimentAnalysisAndDataset.cpp  SentimentAnalysisCNN.cpp  SentimentAnalysisRNN.cpp
src/16_Recommender_systems/: CMakeLists.txt  LatentFactorModel.cpp  Matrix_factorization.cpp
src/17_Generative_adversarial_networks/: CMakeLists.txt  DeepConvolutional_GAN.cpp  GenerativeAdversarialNetwork.cpp
src/18_Appendix_mathematics_4_deep_learning/: CMakeLists.txt  Distributions.cpp  Eigendecompositions.cpp  InformationTheory.cpp  IntegralCalculus.cpp  LinearAlgebraicOperations.cpp  MaximumLikelihood.cpp  MultivariableCalculus.cpp  NaiveBayes.cpp  RandomVariables.cpp  SingleVariableCalculus.cpp  Statistics.cpp
src/19_Reinforcement_Learning/: CMakeLists.txt  Deep_Q_network.cpp  Q_learning.cpp
src/20_Gaussian_Processes/: CMakeLists.txt  gp_inference.cpp  gp_priors.cpp
src/21_Hyperparameter_Optimization/: CMakeLists.txt  Hyper_parameters_search.cpp  Hyperopt_intro.cpp
src/utils/: CMakeLists.txt  Ch_13_util.cpp  Ch_13_util.h  Matplot_plot.cpp  Matplotlib_subplot.cpp  Utils_img_loder_demo  ch_10_util.cpp  ch_10_util.h  ch_11_util.cpp  ch_11_util.h  ch_13_util.cpp  ch_13_util.h  ch_14_util.cpp  ch_14_util.h  ch_15_util.cpp  ch_15_util.h  ch_16_util.cpp  ch_16_util.h  ch_18_util.h  ch_20_util.cpp  ch_20_util.h  ch_8_9_util.cpp  ch_8_9_util.h  datasets.cpp  img_loder_demo.cpp  matplot_exp.cpp  transforms.cpp
torchvision/: Set_libtorchvision.txt
